--- a/wrangler.toml
+++ b/wrangler.toml
@@ -30,3 +30,9 @@ binding = "AI"
 
 [observability]
 enabled = true
+
+[observability.logs]
+enabled = true
+head_sampling_rate = 1
+persist = true
+invocation_logs = true
