--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "clsx": "^2.1.1",
     "fast-xml-parser": "^5.3.3",
     "lucide-react": "^0.562.0",
-    "next": "16.1.1",
-    "next-auth": "^5.0.0-beta.30",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "next": "15.1.3",
+    "next-auth": "5.0.0-beta.25",
+    "next-themes": "^0.4.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
