--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "generate": "opennextjs-cloudflare build",
+    "deploy": "npm run build && npm run generate && wrangler deploy",
     "lint": "eslint"
   },
   "dependencies": {
